@@ -11,12 +11,11 @@ import com.app.LMS.courseManagement.repository.LessonRepository;
 import com.app.LMS.userManagement.repository.UserRepository;
 import com.app.LMS.userManagement.service.UserService;
 import org.springframework.stereotype.Service;
-
 import com.app.LMS.DTO.LessonContentDTO;
 import com.app.LMS.DTO.CourseContentDTO;
+import com.app.LMS.common.Exceptions.dedicatedException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CourseService {
@@ -39,7 +38,7 @@ public class CourseService {
     public Course createCourse(Course course, Long instructorId) {
         User instructor = userService.findById(instructorId).orElse(null);
         if (instructor == null) {
-            throw new RuntimeException("Instructor not found");
+            throw new dedicatedException.UserNotFoundException("Instructor not found");
         }
         course.setInstructor(instructor);
         return courseRepository.save(course);
@@ -47,7 +46,7 @@ public class CourseService {
 
     public void addLessonToCourse(Long courseId, Lesson lesson) {
         Course course;
-        course = courseRepository.findById(courseId).orElseThrow(() -> new RuntimeException("Course not found"));
+        course = courseRepository.findById(courseId).orElseThrow(() -> new dedicatedException.CourseNotFoundException("Course not found"));
         lesson.setCourse(course);
         lessonRepository.save(lesson);
     }
@@ -57,7 +56,7 @@ public class CourseService {
         List<Course> courses = courseRepository.findAll();
         return courses.stream()
                 .map(this::convertToCourseRequest) // Convert each Course to CourseResponse
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Helper method to convert Course to CourseResponse
@@ -72,12 +71,12 @@ public class CourseService {
 
     // Method to enroll a student in a course
     public Boolean enrollStudentInCourse(Long courseId, Long studentId) {
-        Course course = courseRepository.findById(courseId).orElseThrow(() -> new RuntimeException("Course not found"));
-        User student = userRepository.findById(studentId).orElseThrow(() -> new RuntimeException("Student not found"));
+        Course course = courseRepository.findById(courseId).orElseThrow(() -> new dedicatedException.CourseNotFoundException("Course not found"));
+        User student = userRepository.findById(studentId).orElseThrow(() -> new dedicatedException.UserNotFoundException("Student not found"));
 
         // Check if student is already enrolled in the course
         if (enrollmentRepository.findAll().stream().anyMatch(e -> e.getStudent().getId().equals(studentId) && e.getCourse().getId().equals(courseId))) {
-            throw new RuntimeException("Student is already enrolled in this course");
+            throw new dedicatedException.DuplicateEnrollmentException("Student is already enrolled in this course");
         }
 
         // Create the enrollment record
@@ -94,7 +93,7 @@ public class CourseService {
         List<Enrollment> enrollments = enrollmentRepository.findByCourseId(courseId);
 
         if (enrollments.isEmpty()) {
-            throw new RuntimeException("No students enrolled in this course");
+            throw new dedicatedException.NoEnrolledStudentsException("No students enrolled in this course");
         }
 
         // Map enrolled students to a list of formatted strings
@@ -108,7 +107,7 @@ public class CourseService {
                             student.getEmail()
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CourseContentDTO mapToCourseDTO(Course course) {
@@ -120,7 +119,7 @@ public class CourseService {
         dto.setLessons(
                 course.getLessons().stream()
                         .map(this::mapToLessonDTO)
-                        .collect(Collectors.toList())
+                        .toList()
         );
         return dto;
     }
@@ -136,13 +135,13 @@ public class CourseService {
 
 
     public CourseContentDTO getCourseById(Long id) {
-        Course course = courseRepository.findById(id).orElseThrow(() -> new RuntimeException("Course not found with ID: " + id));
+        Course course = courseRepository.findById(id).orElseThrow(() -> new dedicatedException.CourseNotFoundException("Course not found with ID: " + id));
 
         return mapToCourseDTO(course);
     }
 
     public LessonContentDTO getLesson(Long id){
-        Lesson lesson = lessonRepository.findById(id).orElseThrow(() -> new RuntimeException("Lesson not found with ID: " + id));
+        Lesson lesson = lessonRepository.findById(id).orElseThrow(() -> new dedicatedException.LessonNotFoundException("Lesson not found with ID: " + id));
         return mapToLessonDTO(lesson);
     }
 
